# Media_Player_G_Streamer

./: CMakeLists.txt  CombinedVideoPlayerScreen.cpp  CombinedVideoPlayerScreen.h  DualVideoPlayerScreen.cpp  DualVideoPlayerScreen.h  Main.cpp  MainWindow.ui  README.md  SingleVideoPlayerScreen.cpp  SingleVideoPlayerScreen.h  Step by Step Screenshot.docx  mainwindow.cpp  mainwindow.h  videoplayer.cpp  videoplayer.h
